Traducao de defeitos encontrados para ptbr

--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,7 @@
         {
             "resources": [
                 "lib/axe-core.min.js",
+                "lib/axe-pt-br.js",
                 "assets/overlay-icons.css"
             ],
             "matches": [
